webhook/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spiffe-helper-webhook
  namespace: spiffe-helper-webhook
spec:
  ports:
    - port: 8443
      targetPort: 8443
      protocol: TCP
      name: webhook
  selector:
    app: spiffe-helper-webhook
